egonlang-core/res/examples/invalid/if_expression_unit_as_cond.eg
if (void) { 123 } else { 456 };

// out: TypeError: mismatched types: expected type `bool` but received `()`